# validdict

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: 1_literals.py  2_results.py  3_scalars.py  4_keys.py  5_composition.py  6_advanced.py
tests/: test_contextual.py  test_helpers.py  test_key.py  test_locator.py  test_map.py  test_results.py  test_scalars.py  test_schema.py  test_seq.py  test_validator.py
validdict/: __init__.py  contextual.py  exceptions.py  helpers.py  key.py  locator.py  map.py  results.py  scalars.py  schema.py  seq.py  validator.py
