[tool.poetry]
name = "validdict"
version = "0.1.0"
description = "ValidDictorian: Declarative Python Dictionary Validator"
authors = ["Scott Perry <sperry04@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
